--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "animate.css": "^4.1.1",
     "antd": "^5.10.2",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
