--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.15",
+    "@mui/lab": "^5.0.0-alpha.162",
     "@mui/material": "^5.14.15",
     "animate.css": "^4.1.1",
     "antd": "^5.10.2",
@@ -29,7 +30,8 @@
     "react-fast-marquee": "^1.6.2",
     "react-router-dom": "^6.17.0",
     "react-type-animation": "^3.2.0",
-    "sass": "^1.69.4"
+    "sass": "^1.69.4",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
